Added WORDPRESS_DB_PASSWORD to wordpress container
wordpress container was missing required environment WORDPRESS_DB_PASSWORD setting

--- a/docker-wordpress-1/docker-compose.yml
+++ b/docker-wordpress-1/docker-compose.yml
@@ -20,6 +20,8 @@ services:
       - ./wordpress:/var/www/html
       - ./php/php.ini:/usr/local/etc/php/php.ini:ro
       - ./php/log:/var/log/php
+    environment:
+      - WORDPRESS_DB_PASSWORD=your_password
     links:
       - mysql:mysql
 
